tests/ui/errors/snapshots/attribute_removed_go_hint.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Unknown go hint `array_return`
   ╭─[typedef.d.lis:2:1]
 1 │ 
 2 │ #[go(array_return)]
   · ─────────┬─────────
   ·          ╰── not one of the hints `lis add` emits
 3 │ pub fn Sum(data: Slice<byte>) -> Slice<byte>
   ╰────
  help: The hint in this attribute is not recognized. Regenerate this typedef by re-running `lis add` · code: [attribute.unknown]
