tests/ui/errors/snapshots/attribute_unknown_go_hint_on_method.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Unknown go hint `array_return`
   ╭─[typedef.d.lis:7:3]
 6 │ impl Widget {
 7 │   #[go(array_return)]
   ·   ─────────┬─────────
   ·            ╰── not one of the hints `lis add` emits
 8 │   fn Bytes(self) -> Slice<byte>
   ╰────
  help: The hint in this attribute is not recognized. Regenerate this typedef by re-running `lis add` · code: [attribute.unknown]
