tests/ui/errors/snapshots/attribute_unknown_go_hint_on_type_alias.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Unknown go hint `array_return`
   ╭─[typedef.d.lis:2:1]
 1 │ 
 2 │ #[go(array_return)]
   · ─────────┬─────────
   ·          ╰── not one of the hints `lis add` emits
 3 │ pub type Handle
   ╰────
  help: The hint in this attribute is not recognized. Regenerate this typedef by re-running `lis add` · code: [attribute.unknown]
