tests/ui/errors/snapshots/break_value_type_mismatch_with_annotation.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
   ╭─[test.lis:3:16]
 2 │     fn test() {
 3 │ ╭─▶   let x: int = loop {
 4 │ │       break "hello"
 5 │ ├─▶   };
   · ╰──── expected `int`, found `string`
 6 │     }
   ╰────
  help: Change the type annotation to `string` or convert the value to `int` · code: [infer.type_mismatch]
