tests/ui/errors/snapshots/compare_equality_struct_suggests_equals.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid comparison
   ╭─[test.lis:8:16]
 7 │ fn test(a: Holder, b: Holder) {
 8 │   let result = a == b;
   ·                ┬
   ·                ╰── `Holder` cannot be compared with `==`
 9 │ }
   ╰────
  help: Use `.equals()` to compare `Holder` · code: [infer.type_mismatch]
