tests/ui/errors/snapshots/compare_noncomparable_struct_suggests_equality.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid comparison
   ╭─[test.lis:7:16]
 6 │ fn test(a: Holder, b: Holder) {
 7 │   let result = a == b;
   ·                ┬
   ·                ╰── `Holder` cannot be compared with `==`
 8 │ }
   ╰────
  help: Mark `Holder` with `#[equality]` to compare it with `.equals()` · code: [infer.type_mismatch]
