tests/ui/errors/snapshots/compare_tuple_struct_with_slice.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
   ╭─[test.lis:5:3]
 4 │ fn test(a: Pair, b: Pair) -> bool {
 5 │   a == b
   ·   ┬
   ·   ╰── `Pair` cannot be compared with `==`
 6 │ }
   ╰────
  help: The `==` and `!=` operators cannot be used on slices because they are not comparable in Go · code: [infer.type_mismatch]
