tests/ui/errors/snapshots/container_equals_element_with_bound_mismatched_equals_rejected.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Invalid comparison
    ╭─[test.lis:11:3]
 10 │ fn test(a: Slice<Box<Slice<int>>>, b: Slice<Box<Slice<int>>>) -> bool {
 11 │   a.equals(b)
    ·   ┬
    ·   ╰── cannot be compared
 12 │ }
    ╰────
  help: `Slice<Box<Slice<int>>>` cannot be compared because a struct containing non-comparable fields cannot be compared · code: [infer.not_equatable]
