tests/ui/errors/snapshots/container_equals_rejected_for_extra_generic_equals.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid comparison
    ╭─[test.lis:11:3]
 10 │ fn test(a: Slice<Handler>, b: Slice<Handler>) -> bool {
 11 │   a.equals(b)
    ·   ┬
    ·   ╰── cannot be compared
 12 │ }
    ╰────
  help: `Slice<Handler>` cannot be compared because a struct containing non-comparable fields cannot be compared · code: [infer.not_equatable]
