tests/ui/errors/snapshots/container_equals_rejects_bound_mismatched_comparable_element.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Invalid comparison
    ╭─[test.lis:11:3]
 10 │ fn test(a: Slice<Box<int>>, b: Slice<Box<int>>) -> bool {
 11 │   a.equals(b)
    ·   ┬
    ·   ╰── cannot be compared
 12 │ }
    ╰────
  help: `Slice<Box<int>>` cannot be compared because a type whose `equals` requires stricter bounds cannot be compared · code: [infer.not_equatable]
